--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 geocoder
 geopy
 pydeck
-police-api-client==1.2.2
+police-api-client
 plotly
-numpy==1.18.5
-pandas==1.3.1
-streamlit==1.3.0
+numpy
+pandas
+streamlit
